# paper_utilities

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
paper_utilities/analytics/: __init__.py  statistics.py
paper_utilities/data/: __init__.py  table.py
paper_utilities/plot/: __init__.py  fonts.py  tables.py  time_series.py
paper_utilities/visualization/: __init__.py  color_palette.py  fonts.py  tables.py  time_series.py
